using the DTO pattern to return users