@@ -1,6 +1,8 @@
 package com.caiovieira.workshop.config;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
@@ -18,13 +20,15 @@ public class Instantiation implements CommandLineRunner{
 	@Override
 	public void run(String... args) throws Exception {
 		
-		userRepository.deleteAll();
+//		userRepository.deleteAll();
 		
 		User maria = new User(null, "Maria Brown", "maria@gmail.com");
 		User alex = new User(null, "Alex Green", "alex@gmail.com");
 		User bob = new User(null, "Bob Grey", "bob@gmail.com");
 		
-		userRepository.save((User) Arrays.asList(maria, alex, bob));
+		List<User> list = List.of(maria, alex, bob);
+		
+		userRepository.saveAll(list);
 		
 	}
 
